; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_bfin_dma_5xx.c_set_dma_callback.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_bfin_dma_5xx.c_set_dma_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i8*, i32 }

@MAX_DMA_CHANNELS = common dso_local global i32 0, align 4
@dma_ch = common dso_local global %struct.TYPE_2__* null, align 8
@DMA_CHANNEL_FREE = common dso_local global i64 0, align 8
@IRQF_DISABLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_dma_callback(i32 %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @MAX_DMA_CHANNELS, align 4
  %12 = icmp uge i32 %10, %11
  br i1 %12, label %22, label %13

13:                                               ; preds = %3
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dma_ch, align 8
  %15 = load i32, i32* %5, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @DMA_CHANNEL_FREE, align 8
  %21 = icmp eq i64 %19, %20
  br label %22

22:                                               ; preds = %13, %3
  %23 = phi i1 [ true, %3 ], [ %21, %13 ]
  %24 = zext i1 %23 to i32
  %25 = call i32 @BUG_ON(i32 %24)
  %26 = load i32*, i32** %6, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %59

28:                                               ; preds = %22
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @channel2irq(i32 %29)
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* @IRQF_DISABLED, align 4
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dma_ch, align 8
  %35 = load i32, i32* %5, align 4
  %36 = zext i32 %35 to i64
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i64 %36
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 3
  %39 = load i32, i32* %38, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = call i32 @request_irq(i32 %31, i32* %32, i32 %33, i32 %39, i8* %40)
  store i32 %41, i32* %8, align 4
  %42 = load i32, i32* %8, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %28
  %45 = load i32, i32* %8, align 4
  store i32 %45, i32* %4, align 4
  br label %60

46:                                               ; preds = %28
  %47 = load i32, i32* %9, align 4
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dma_ch, align 8
  %49 = load i32, i32* %5, align 4
  %50 = zext i32 %49 to i64
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i64 %50
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 1
  store i32 %47, i32* %52, align 8
  %53 = load i8*, i8** %7, align 8
  %54 = load %struct.TYPE_2__*, %struct.TYPE_2__** @dma_ch, align 8
  %55 = load i32, i32* %5, align 4
  %56 = zext i32 %55 to i64
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i64 %56
  %58 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %57, i32 0, i32 2
  store i8* %53, i8** %58, align 8
  br label %59

59:                                               ; preds = %46, %22
  store i32 0, i32* %4, align 4
  br label %60

60:                                               ; preds = %59, %44
  %61 = load i32, i32* %4, align 4
  ret i32 %61
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @channel2irq(i32) #1

declare dso_local i32 @request_irq(i32, i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
